--- a/src/ContosoTraders.Ui.Website/src/styles/pages/_profile.scss
+++ b/src/ContosoTraders.Ui.Website/src/styles/pages/_profile.scss
@@ -1,43 +1,21 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the User Profile page.
 // -----------------------------------------------------------------------------
-.ProfileSection {
-    margin-top: 137px;
-    padding: 0 70px 0 70px;
-    .breadcrump{
-        padding: 24px 0;
-        p{
-          margin: 0;
-          text-transform: capitalize;
-          span{
-              font-family: 'Heebo';
-              font-size: 14px;
-              font-weight: 400;
-          }
-          b{
-              font-family: 'Heebo';
-              font-size: 14px;
-              font-weight: 500;
-              a{
-                color: #000000;
-                &:hover{
-                  color: #2974f0 !important;
-                  text-decoration: none;
-                }
-              }
-          }
+.profileMain {
+    margin-top: 192px;
+    .ProfileSection{
+        padding: 0 70px 0 70px;
+        input[type="date"]::-webkit-calendar-picker-indicator {
+            display: none;
+            -webkit-appearance: none;
+            appearance: none;
+        }
+        .MuiInputAdornment-positionStart{
+            position: absolute;
+            right: 0;
         }
     }
-    input[type='date']::-webkit-calendar-picker-indicator {
-        display: none;
-        -webkit-appearance: none;
-        appearance: none;
-    }
-    .MuiInputAdornment-positionStart{
-        position: absolute;
-        right: 0;
-    }
-  }
+  
   .ProfileSection .topHeaderSection {
     display: flex;
     align-items: center;
@@ -227,6 +205,7 @@
     width:24px;
     height: 24px;
   }
+}
 .profile {
     margin-bottom: 11.375rem;
     margin-left: auto;
