--- a/src/ContosoTraders.Ui.Website/src/styles/pages/_cart.scss
+++ b/src/ContosoTraders.Ui.Website/src/styles/pages/_cart.scss
@@ -1,32 +1,10 @@
+.CartMain{
+  margin-top: 192px;
 .CartSection {
-    margin: 137px 70px 50px 70px;
+    padding: 0 70px 0 70px;
     .innerCart{
         padding: 0 30px;
     }
-    .breadcrump{
-        padding: 24px 0;
-        p{
-          margin: 0;
-          text-transform: capitalize;
-          span{
-              font-family: 'Heebo';
-              font-size: 14px;
-              font-weight: 400;
-          }
-          b{
-              font-family: 'Heebo';
-              font-size: 14px;
-              font-weight: 500;
-              a{
-                color: #000000;
-                &:hover{
-                  color: #2974f0 !important;
-                  text-decoration: none;
-                }
-              }
-          }
-        }
-      }
       .CartTopHeadPart{
         display: flex;
         align-items: center;
@@ -56,75 +34,6 @@
     letter-spacing: 0px;
     color: #171520;
     margin: 0;
-  }
-  
-  /*---------------------------------quantitypicker----------------------------*/
-  .quantity-picker {
-    display: inline-flex;
-    width: 89px;
-    height: 40px;
-    align-items: center;
-    justify-content: space-around;
-    vertical-align:middle;
-    border: 1px solid #707070;
-    border-radius: 8px;
-  
-  }
-  .quantity-input:focus {
-    background: red;
-  }
-  
-  .quantity-modifier,
-  .quantity-display {
-    -webkit-user-select: none;
-      -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    outline: none;
-  }
-  
-  .quantity-modifier {
-    font-size: 1.5rem;
-    background: none!important;
-    border: 0 solid #dbdbdb;
-    text-align: center;
-    cursor: pointer;
-    width: 24px;
-    color: #171520 !important;
-  }
-  .quantity-modifier:hover {
-    background: #dadada;
-    color: #555555;
-  }
-  
-  .quantity-modifier:focus {
-    outline:0;
-  }
-  
-  .left-modifier {
-    border-radius: 3px 0 0 3px;
-  }
-  
-  .mod-disable {
-    color: #d9d9d9 !important;
-  }
-  
-  .mod-disable:hover {
-    color:#d9d9d9;
-  }
-  
-  .right-modifier {
-    border-radius: 0 3px 3px 0;
-  }
-  
-  .quantity-display {
-    font-family: "Inter";
-    font-weight: 600;
-    font-size: 14px;
-    width: 23px;
-    height: 28px;
-    border: 0;
-    text-align: center;
   }
   
   /*===================search bar===========================*/
@@ -326,3 +235,4 @@
   .CartSection .OrderButtonsection{
     margin-top: 34px;
   }
+}
