--- a/src/ContosoTraders.Ui.Website/src/styles/pages/_profile.scss
+++ b/src/ContosoTraders.Ui.Website/src/styles/pages/_profile.scss
@@ -12,7 +12,7 @@
         }
         .MuiInputAdornment-positionStart{
             position: absolute;
-            right: 0;
+            right: 15px;
         }
     }
   
@@ -164,7 +164,7 @@
   }
   
   .ProfileSection .formtextfields{
-  
+    width: 100%;
     background: #F1F1F1;
     border-radius: 4px;
     border: 0;
@@ -178,7 +178,7 @@
   }
   .ProfileSection .MuiInputBase-input {
     padding: 17px 23px 14px 16px;
-    width: 550px;
+    // width: 550px;
   }
   .ProfileSection .newpassword-container .MuiInputBase-input {
     padding: 17px 23px 14px 16px;
@@ -188,12 +188,10 @@
   .ProfileSection .MuiFormHelperText-root.Mui-error {
     color: red;
     background: white;
+    margin: 0;
   }
   .ProfileSection .formsection{
     width: 100%;
-  }
-  .ProfileSection .newpassfield{
-    width: 590px;
   }
   .ProfileSection .passworddiv{
     margin-top: 50px;
