dark mode ui changes

--- a/src/ContosoTraders.Ui.Website/src/components/dropdowns/categories.scss
+++ b/src/ContosoTraders.Ui.Website/src/components/dropdowns/categories.scss
@@ -4,6 +4,10 @@
     border: 1px solid #EFEFEF !important;
 }
 
+.dark .mainHeader .categories-btn {
+    color: #000000 !important;
+}
+
 #customized-menu .MuiPopover-paper {
     left: 70px !important;
 }
