Removed css imports from main.scss fixed #214

--- a/src/ContosoTraders.Ui.Website/src/components/footer/footer.scss
+++ b/src/ContosoTraders.Ui.Website/src/components/footer/footer.scss
@@ -1,6 +1,9 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
+@import '../../styles/abstracts/variables';
+@import '../../styles/abstracts/mixins/font-placeholders';
+
 .foo {
     background-color: $color-background-medium;
     display: flex;
