--- a/src/ContosoTraders.Ui.Website/src/components/header/header.scss
+++ b/src/ContosoTraders.Ui.Website/src/components/header/header.scss
@@ -1,6 +1,9 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
+@import '../../styles/abstracts/variables';
+@import '../../styles/abstracts/mixins/font-placeholders';
+
 .header {
     align-items: center;
     display: flex;
