--- a/src/ContosoTraders.Ui.Website/src/pages/list/list.scss
+++ b/src/ContosoTraders.Ui.Website/src/pages/list/list.scss
@@ -1,6 +1,7 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the Products List pages.
 // -----------------------------------------------------------------------------
+@import '../../styles/abstracts/variables';
 .list {
     margin-top: 192px;
     &__content {
