--- a/src/ContosoTraders.Ui.Website/src/pages/profile/profile.scss
+++ b/src/ContosoTraders.Ui.Website/src/pages/profile/profile.scss
@@ -1,6 +1,9 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the User Profile page.
 // -----------------------------------------------------------------------------
+@import '../../styles/abstracts/variables';
+@import '../../styles/abstracts/mixins/font-placeholders';
+
 .profileMain {
     margin-top: 192px;
     .ProfileSection{
