--- a/src/ContosoTraders.Ui.Website/src/pages/detail/detail.scss
+++ b/src/ContosoTraders.Ui.Website/src/pages/detail/detail.scss
@@ -1,6 +1,8 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the Detail Products page.
 // -----------------------------------------------------------------------------
+@import '../../styles/abstracts/variables';
+@import '../../styles/abstracts/mixins/font-placeholders';
 .ProductContainerSectionMain{
   margin-top:192px;
   .ProductContainerSection{
