variable and mixin imports

--- a/src/ContosoTraders.Ui.Website/src/components/footer/footer.scss
+++ b/src/ContosoTraders.Ui.Website/src/components/footer/footer.scss
@@ -1,8 +1,7 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
-@import '../../styles/abstracts/variables';
-@import '../../styles/abstracts/mixins/font-placeholders';
+@import "../../main.scss";
 
 .foo {
     background-color: $color-background-medium;
