Removed css imports from main.scss (fix #214) (#216)
* Removed css imports from main.scss fixed #214

* variable and mixin imports

---------

Co-authored-by: Marcus Felling <marcus.felling@gmail.com>

--- a/src/ContosoTraders.Ui.Website/src/components/footer/footer.scss
+++ b/src/ContosoTraders.Ui.Website/src/components/footer/footer.scss
@@ -1,6 +1,8 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
+@import "../../main.scss";
+
 .foo {
     background-color: $color-background-medium;
     display: flex;
