--- a/src/ContosoTraders.Ui.Website/src/components/header/header.scss
+++ b/src/ContosoTraders.Ui.Website/src/components/header/header.scss
@@ -1,6 +1,8 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
+@import "../../main.scss";
+
 .header {
     align-items: center;
     display: flex;
