--- a/src/ContosoTraders.Ui.Website/src/pages/profile/profile.scss
+++ b/src/ContosoTraders.Ui.Website/src/pages/profile/profile.scss
@@ -1,6 +1,8 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the User Profile page.
 // -----------------------------------------------------------------------------
+@import "../../main.scss";
+
 .profileMain {
     margin-top: 192px;
     .ProfileSection{
