--- a/src/ContosoTraders.Ui.Website/src/pages/home/home.scss
+++ b/src/ContosoTraders.Ui.Website/src/pages/home/home.scss
@@ -1,6 +1,8 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the Home page.
 // -----------------------------------------------------------------------------
+@import "../../main.scss";
+
 $dark: #000;
 $light: #fff;
 $darkgrey: #222222;
