--- a/src/ContosoTraders.Ui.Website/src/pages/list/list.scss
+++ b/src/ContosoTraders.Ui.Website/src/pages/list/list.scss
@@ -1,6 +1,8 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the Products List pages.
 // -----------------------------------------------------------------------------
+@import "../../main.scss";
+
 .list {
     margin-top: 192px;
     &__content {
